src/objects/Time_Slots__c.object
<CustomObject>
    <description>Time slots of the agendaThis object is nothing but the seminar object. This is where you add seminars</description>
    <fields>
        <fullName>Agenda__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agenda</label>
        <referenceTo>Agenda__c</referenceTo>
        <relationshipName>Time_Slots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>BLN_Room__c</referenceTo>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slot_End_date__c</fullName>
        <label>Slot End date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Slot_Start_date__c</fullName>
        <label>Slot Start date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>BLN Time Slot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>